[package]
name = "sybil"
version = "0.1.0"
authors = ["Matan Hamilis <matan.hamilis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.27.1"
structopt = "0.3.25"
tokio = { version = "1.14.0", features = ["full"] }